[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py37"
exclude = ["migrations"]
select = ["E", "F", "W", "C9", "I", "Q", "UP", "RUF"]
ignore = ["RUF012"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.isort]
force-single-line = true

[tool.coverage.run]
source = ["mfa"]
